Add first animations

--- a/html/resto_palette.html
+++ b/html/resto_palette.html
@@ -17,7 +17,7 @@
                 </a>
                 <img src="../images/logo/ohmyfood.png" alt="logo">
             </div>
-            <div>
+            <div class="img_box">
                 <img class="menu__img" src="../images/restaurants/palette.jpg" alt="parc">
             </div>
         </header>    
@@ -26,7 +26,7 @@
             <div class="menu">
                 <div class="menu__name">
                     <h2>La Palette du goût</h2>
-                    <span class="material-icons base">favorite_border</span>
+                    <button class="btn-favorite"></button>
                 </div>
                 <div class="dish-box">
                     <div class="dish">
@@ -164,7 +164,9 @@
                         </div>
                     </div>
                 </div>
-                <a class="button_search" href="#resto">Commander</a>
+                <button class="btn-gradient">
+                    <a href="#resto">Commander</a>
+                </button>
             </div>
             
 
