Add menu animations

--- a/html/resto_palette.html
+++ b/html/resto_palette.html
@@ -38,38 +38,45 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Fricassée d'escargot</strong></p> 
-                                            <p>Au piment d'Espelette</p>
+                                        <span class="card-menu__txt--dish"><strong>Fricassée d'escargot</strong></span> 
+                                            <span class="card-menu__txt--detail">Au piment d'Espelette</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>25€</b></span>
                                     </div>
                                 </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                </div>
                             </div>   
-                        </div>
-                        <div class="menu__box">
+                        
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Foie gras de canard mi-cuit</strong></p> 
-                                            <p>Et ses copeaux de truffe noire</p>
+                                        <span class="card-menu__txt--dish"><strong>Foie gras de canard mi-cuit</strong></span> 
+                                            <span class="card-menu__txt--detail">Et ses copeaux de truffe noire</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>35€</b></span>
                                     </div>
                                 </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                </div>
                             </div>   
-                        </div>
-                        <div class="menu__box">
+                        
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Oeuf au plat</strong></p> 
-                                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        <span class="card-menu__txt--dish"><strong>Oeuf au plat</strong></span> 
+                                            <span class="card-menu__txt--detail">Assaisonné à la truffe sur lit de caviar</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>20€</b></span>
                                     </div>
+                                </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
                                 </div>
                             </div>   
                         </div>
@@ -83,8 +90,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Filet de boeuf aux herbes</strong></p> 
-                                            <p>Accompagné de sa ribambelle de légumes</p>
+                                        <span class="card-menu__txt--dish"><strong>Filet de boeuf aux herbes</strong></span> 
+                                            <span class="card-menu__txt--detail">Accompagné de sa ribambelle de légumes</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>40€</b></span>
@@ -96,8 +103,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Parmentier de queue de boeuf</strong></p> 
-                                            <p>À la truffe noire sur sa purée de panais</p>
+                                        <span class="card-menu__txt--dish"><strong>Parmentier de queue de boeuf</strong></span> 
+                                            <span class="card-menu__txt--detail">À la truffe noire sur sa purée de panais</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>35€</b></span>
@@ -109,8 +116,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Filet de turbot</strong></p> 
-                                            <p>Aux agrumes</p>
+                                        <span class="card-menu__txt--dish"><strong>Filet de turbot</strong></span> 
+                                            <span class="card-menu__txt--detail">Aux agrumes</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>44€</b></span>
@@ -127,8 +134,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Paris-Brest</strong></p> 
-                                            <p>Revisité</p>
+                                        <span class="card-menu__txt--dish"><strong>Paris-Brest</strong></span> 
+                                            <span class="card-menu__txt--detail">Revisité</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>18€</b></span>
@@ -140,8 +147,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Macaron au chocolat d'exception</strong></p> 
-                                            <p>Et glace à la vanille de Madagascar</p>
+                                        <span class="card-menu__txt--dish"><strong>Macaron au chocolat d'exception</strong></span> 
+                                            <span class="card-menu__txt--detail">Et glace à la vanille de Madagascar</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>22€</b></span>
@@ -153,8 +160,8 @@
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
-                                        <p><strong>Mousse au chocolat</strong></p> 
-                                            <p>Au piment d'Espelette et à la truffe noire</p>
+                                        <span class="card-menu__txt--dish"><strong>Mousse au chocolat</strong></span> 
+                                            <span class="card-menu__txt--detail">Au piment d'Espelette et à la truffe noire</span>
                                     </div>           
                                     <div class="card-menu__price">
                                         <span ><b>23€</b></span>
