--- a/html/resto_palette.html
+++ b/html/resto_palette.html
@@ -25,8 +25,11 @@
             
             <div class="menu">
                 <div class="menu__name">
-                    <h2>La Palette du goût</h2>
-                    <button class="btn-favorite"></button>
+                    <div class="menu__name--box">
+                        <h2>La Palette du goût</h2>
+                        <button class="btn-favorite"></button>
+                    </div>
+
                 </div>
                 <div class="dish-box">
                     <div class="dish">
@@ -64,7 +67,6 @@
                                     <i class="fa-solid fa-circle-check icheck"></i>
                                 </div>
                             </div>   
-                        
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
@@ -97,9 +99,10 @@
                                         <span ><b>40€</b></span>
                                     </div>
                                 </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                </div>
                             </div>   
-                        </div>
-                        <div class="menu__box">
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
@@ -110,9 +113,10 @@
                                         <span ><b>35€</b></span>
                                     </div>
                                 </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                </div>
                             </div>   
-                        </div>
-                        <div class="menu__box">
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
@@ -122,6 +126,9 @@
                                     <div class="card-menu__price">
                                         <span ><b>44€</b></span>
                                     </div>
+                                </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
                                 </div>
                             </div>   
                         </div>
@@ -141,9 +148,10 @@
                                         <span ><b>18€</b></span>
                                     </div>
                                 </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                </div>
                             </div>   
-                        </div>
-                        <div class="menu__box">
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
@@ -154,9 +162,10 @@
                                         <span ><b>22€</b></span>
                                     </div>
                                 </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                </div>
                             </div>   
-                        </div>
-                        <div class="menu__box">
                             <div class="card-menu">
                                 <div class="card-menu__description">
                                     <div class="card-menu__txt">
@@ -166,6 +175,9 @@
                                     <div class="card-menu__price">
                                         <span ><b>23€</b></span>
                                     </div>
+                                </div>
+                                <div class="card-menu__check">
+                                    <i class="fa-solid fa-circle-check icheck"></i>
                                 </div>
                             </div>   
                         </div>
