--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </div>
             <div class="form">
                 <form class="form__loc" method="post" action="#">
-                    <i class="fa-solid fa-location-dot fa-lg"></i>
+                    <i class="fa-solid fa-location-dot fa-lg loc"></i>
                     <input class="form--input_style" type="text" name="pseudo" id="pseudo" placeholder="Paris, Belleville" size="10" maxlength="20" />
                 </form>
             </div>
             <div class="explo">
-                <h1>Réservez le menu qui vous convient</h2>
-                    <p>Découvrez des restaurants d'exeption, séléctionnés par nos soins.</p>
+                <h2>Réservez le menu qui vous convient</h2>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                     <button class="btn-gradient">
                         <a href="#resto">Explorez nos restaurants</a>
                     </button>
