Modif menu check anim

--- a/html/resto_note.html
+++ b/html/resto_note.html
@@ -197,9 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn-gradient">
-                    <a href="#resto">Commander</a>
-                </button>
+                <a class="btn-gradient" href="#resto">Commander</a>
             </div>
             
 
