--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             <div class="explo">
                 <h2>Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button class="btn-gradient">
-                        <a href="#resto">Explorez nos restaurants</a>
-                    </button>
+                    <a class="btn-gradient" href="#resto">Explorez nos restaurants</a>
             </div>           
         </header>
         <main>
