--- a/html/resto_franc.html
+++ b/html/resto_franc.html
@@ -203,7 +203,7 @@
                         <strong>Devenir partenaire</strong>
                     </a>
                     <a href="#">Mentions légales</a>
-                    <a href="#">Contact</a>
+                    <a href="mailto:test@test.fr">Contact</a>
                 </div>
             </div>
         </footer>
