--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <strong>Devenir partenaire</strong>
                     </a>
                     <a href="#">Mentions légales</a>
-                    <a href="#">Contact</a>
+                    <a href="mailto:test@test.fr">Contact</a>
                 </div>
             </div>            
         </footer>
