Add mention new on restos

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <a href="html/resto_palette.html">
                         <div class="card-resto">
                             <img class="card-resto__img" src="./images/restaurants/palette.jpg" alt="parc">
+                            <span class="new">Nouveau</span>
                             <div class="card-resto__description">
                                 <div class="card-resto__txt">
                                     <p><strong>La palette du goût</strong></p> 
@@ -74,6 +75,7 @@
                     <a href="html/resto_note.html">
                         <div class="card-resto">
                             <img class="card-resto__img" src="./images/restaurants/note.jpg" alt="parc">
+                            <span class="new">Nouveau</span>
                             <div class="card-resto__description">
                                 <div class="card-resto__txt">
                                     <p><strong>La note enchantée</strong></p> 
