--- a/html/resto_palette.html
+++ b/html/resto_palette.html
@@ -5,7 +5,7 @@
         <title>La palette du gout</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
         <link rel="stylesheet" href="../css/prefixed/style.css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
@@ -13,7 +13,7 @@
         <header>           
             <div class="header__logo">
                 <a href="../index.html">
-                    <i class="fa-solid fa-arrow-left"></i>
+                    <span class="material-symbols-rounded">arrow_back</span>
                 </a>
                 <img src="../images/logo/ohmyfood.png" alt="logo">
             </div>
@@ -188,6 +188,7 @@
             
 
         </main>
+
         <footer>
             <div class="footer__box">
                 <div class="footer__logo">
@@ -195,18 +196,21 @@
                 </div>
                 <div class="footer__link_box">
                     <a href="#">
-                        <i class="fa-solid fa-utensils"></i>
+                        <span class="material-symbols-rounded">restaurant</span>
                         <b>Proposer un restaurant</b>
                     </a>
                     <a href="#">
-                        <i class="fa-solid fa-handshake-angle"></i>
+                        <span class="material-symbols-rounded">
+                            handshake
+                        </span>
                         <strong>Devenir partenaire</strong>
                     </a>
                     <a href="#">Mentions légales</a>
                     <a href="mailto:test@test.fr">Contact</a>
                 </div>
-            </div>
+            </div>            
         </footer>
+
     </body>
 
 </html>
