--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title>ohmyfood</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
         <link rel="stylesheet" href="./css/prefixed/style.css" />
     </head>
     <body>
@@ -125,11 +126,13 @@
                 </div>
                 <div class="footer__link_box">
                     <a href="#">
-                        <i class="fa-solid fa-utensils"></i>
+                        <span class="material-symbols-rounded">restaurant</span>
                         <b>Proposer un restaurant</b>
                     </a>
                     <a href="#">
-                        <i class="fa-solid fa-handshake-angle"></i>
+                        <span class="material-symbols-rounded">
+                            handshake
+                        </span>
                         <strong>Devenir partenaire</strong>
                     </a>
                     <a href="#">Mentions légales</a>
