--- a/html/resto_delice.html
+++ b/html/resto_delice.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
         <link rel="stylesheet" href="../css/prefixed/style.css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="shortcut icon" href="#">
     </head>
     <body>
         <header>           
