--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 </div>
                 <div class="footer__link_box">
                     <a href="#">
-                        <span class="material-symbols-rounded">restaurant</span>
+                        <span class="material-symbols-rounded  ifoot">restaurant</span>
                         <b>Proposer un restaurant</b>
                     </a>
                     <a href="#">
-                        <span class="material-symbols-rounded">
+                        <span class="material-symbols-rounded ifoot">
                             handshake
                         </span>
                         <strong>Devenir partenaire</strong>
