--- a/html/resto_note.html
+++ b/html/resto_note.html
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                         
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>
                             <div class="card-menu">
@@ -93,7 +93,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                         </div>
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -143,7 +143,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                         </div>
@@ -164,7 +164,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -178,7 +178,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -192,7 +192,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                         </div>
@@ -210,11 +210,11 @@
                 </div>
                 <div class="footer__link_box">
                     <a href="#">
-                        <span class="material-symbols-rounded">restaurant</span>
+                        <span class="material-symbols-rounded  ifoot">restaurant</span>
                         <b>Proposer un restaurant</b>
                     </a>
                     <a href="#">
-                        <span class="material-symbols-rounded">
+                        <span class="material-symbols-rounded  ifoot">
                             handshake
                         </span>
                         <strong>Devenir partenaire</strong>
