--- a/html/resto_palette.html
+++ b/html/resto_palette.html
@@ -49,7 +49,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                         
@@ -64,7 +66,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -78,7 +82,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                         </div>
@@ -100,7 +106,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -114,7 +122,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -128,7 +138,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                         </div>
@@ -149,7 +161,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -163,7 +177,9 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">
+                                        check_circle
+                                    </span>
                                 </div>
                             </div>   
                             <div class="card-menu">
@@ -177,7 +193,7 @@
                                     </div>
                                 </div>
                                 <div class="card-menu__check">
-                                    <i class="fa-solid fa-circle-check icheck"></i>
+                                    <span class="material-symbols-rounded icheck">check_circle</span>
                                 </div>
                             </div>   
                         </div>
@@ -196,11 +212,11 @@
                 </div>
                 <div class="footer__link_box">
                     <a href="#">
-                        <span class="material-symbols-rounded">restaurant</span>
+                        <span class="material-symbols-rounded  ifoot">restaurant</span>
                         <b>Proposer un restaurant</b>
                     </a>
                     <a href="#">
-                        <span class="material-symbols-rounded">
+                        <span class="material-symbols-rounded  ifoot">
                             handshake
                         </span>
                         <strong>Devenir partenaire</strong>
