Replace balise btn ->span

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     <p>Ménilmontant</p>
                                 </div>
                                 <div class="card-resto__icon">
-                                    <button class="btn-favorite"></button>
+                                    <span class="btn-favorite"></span>
                                 </div>           
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                     <p>Charonne</p>
                                 </div>
                                 <div class="card-resto__icon">
-                                    <button class="btn-favorite"></button>
+                                    <span class="btn-favorite"></span>
                                 </div>           
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                                     <p>Cité Rouge</p>
                                 </div>
                                 <div class="card-resto__icon">
-                                    <button class="btn-favorite"></button>
+                                    <span class="btn-favorite"></span>
                                 </div>           
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                                     <p>Folie-Méricourt</p>
                                 </div>
                                 <div class="card-resto__icon">
-                                    <button class="btn-favorite"></button>
+                                    <span class="btn-favorite"></span>
                                 </div>           
                             </div>
                         </div>
